[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/ui/gameover.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Message" type="RichTextLabel" parent="."]
margin_left = 460.0
margin_top = 184.0
margin_right = 704.0
margin_bottom = 248.0
text = "You dead"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="RichTextLabel" parent="."]
margin_left = 425.0
margin_top = 214.0
margin_right = 658.0
margin_bottom = 254.0
text = "Your Score: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Place" type="RichTextLabel" parent="."]
visible = false
margin_left = 469.996
margin_top = 235.903
margin_right = 639.996
margin_bottom = 307.903
text = "Rank: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Others" type="RichTextLabel" parent="."]
visible = false
margin_left = 397.964
margin_top = 259.22
margin_right = 455.964
margin_bottom = 289.22
text = "Others:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Highscores" type="RichTextLabel" parent="."]
visible = false
margin_left = 402.335
margin_top = 283.22
margin_right = 761.335
margin_bottom = 461.22
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Username" type="LineEdit" parent="."]
margin_left = 516.357
margin_top = 239.44
margin_right = 726.357
margin_bottom = 279.44
text = "Username"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UsernameLabel" type="RichTextLabel" parent="."]
margin_left = 420.018
margin_top = 253.599
margin_right = 518.018
margin_bottom = 293.599
text = "Username:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UsernameSubmit" type="Button" parent="."]
margin_left = 738.282
margin_top = 238.484
margin_right = 790.282
margin_bottom = 282.484
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="."]
margin_left = 447.444
margin_top = 494.071
margin_right = 590.444
margin_bottom = 549.071
text = "Play Again"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="text_entered" from="Username" to="." method="_on_Username_text_entered"]
[connection signal="pressed" from="UsernameSubmit" to="." method="submit_button"]
[connection signal="pressed" from="Back" to="." method="play_again"]
